<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.LoginFragment">

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/koodak_bold"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="#083E55"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.331"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_et_phone_bg"
            android:drawableRight="@drawable/phone"
            android:drawablePadding="8dp"
            android:elevation="8dp"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:inputType="number"
            android:textSize="14sp"
            android:layout_marginEnd="51dp"
            android:layout_marginStart="51dp"
            android:fontFamily="@font/koodak_bold"
            android:hint="@string/phone_number"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:shadowColor="#33083E55"
            android:textColorHint="#80083E55"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome"
            app:layout_constraintVertical_bias="0.224"
            tools:layout_editor_absoluteX="51dp" />
        <androidx.appcompat.widget.AppCompatButton
            app:layout_constraintTop_toBottomOf="@id/et_phone"
            app:layout_constraintStart_toStartOf="@id/et_phone"
            app:layout_constraintEnd_toEndOf="@id/et_phone"
            android:layout_marginTop="32dp"
            android:text="@string/input"
            android:id="@+id/btn_input"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:fontFamily="@font/koodak_bold"
            android:layout_marginStart="90dp"
            android:layout_marginEnd="90dp"
            android:background="@drawable/next_btn_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_have_account"
            android:layout_marginTop="11dp"
            app:layout_constraintTop_toBottomOf="@id/btn_input"
            app:layout_constraintStart_toStartOf="@id/btn_input"
            android:layout_width="wrap_content"
            android:textSize="14sp"
            android:fontFamily="@font/koodak_bold"
            android:textColor="#E60E6B94"
            android:text="@string/create_account"
            app:layout_constraintEnd_toEndOf="@id/btn_input"
            android:layout_height="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>