<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.RegisterFragment">


        <TextView
            android:layout_marginBottom="35dp"
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/koodak_bold"
            android:gravity="center"
            android:text="@string/create_account_two"
            android:textColor="#083E55"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.331"
            tools:layout_editor_absoluteX="0dp" />

        <LinearLayout
            android:layout_marginTop="38dp"
            android:id="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/et_phone"
            android:layout_height="wrap_content">

            <EditText
                android:layout_marginEnd="8dp"
                android:id="@+id/et_name"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="16dp"
                android:layout_weight="0"
                android:background="@drawable/login_et_phone_bg"
                android:elevation="8dp"
                android:fontFamily="@font/koodak_bold"
                android:hint="@string/name"
                android:paddingLeft="8dp"
                android:paddingTop="10dp"
                android:paddingEnd="28dp"
                android:paddingBottom="10dp"
                android:textColorHint="#80083E55"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/et_family"
                android:layout_width="140dp"
                android:layout_weight="0"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/login_et_phone_bg"
                android:elevation="8dp"
                android:fontFamily="@font/koodak_bold"
                android:hint="@string/last_name"
                android:paddingLeft="8dp"
                android:paddingTop="10dp"
                android:paddingEnd="28dp"
                android:paddingBottom="10dp"
                android:textColorHint="#80083E55"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@id/et_phone"
                app:layout_constraintEnd_toStartOf="@id/et_name"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>



        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_et_phone_bg"
            android:drawableRight="@drawable/phone"
            android:drawablePadding="8dp"
            android:elevation="8dp"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:inputType="number"
            android:textSize="14sp"
            android:layout_marginEnd="51dp"
            android:layout_marginStart="51dp"
            android:fontFamily="@font/koodak_bold"
            android:hint="@string/phone_number"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:shadowColor="#33083E55"
            android:textColorHint="#80083E55"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome"
            app:layout_constraintVertical_bias="0.226"
            tools:layout_editor_absoluteX="51dp" />


        <TextView
            android:id="@+id/tv_birth_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_et_phone_bg"
            android:drawableRight="@drawable/birth_day"
            android:paddingRight="8dp"
            android:drawablePadding="8dp"
            android:elevation="8dp"
            android:paddingLeft="8dp"
            android:textSize="14sp"
            android:layout_marginEnd="51dp"
            android:layout_marginStart="51dp"
            android:fontFamily="@font/koodak_bold"
            android:hint="@string/birthday"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:shadowColor="#33083E55"
            android:textColor="#80083E55"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/et_phone"
            app:layout_constraintVertical_bias="0.224"
            tools:layout_editor_absoluteX="51dp" />

        <EditText
            android:paddingRight="4dp"
            android:drawableRight="@drawable/vector_gender"
            android:layout_marginBottom="16dp"
            android:id="@+id/et_gender"
            android:layout_width="150dp"
            android:inputType=""
            android:layout_height="wrap_content"
            android:layout_marginEnd="56dp"
            android:paddingLeft="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/login_et_phone_bg"
            android:elevation="8dp"
            android:fontFamily="@font/koodak_bold"
            android:hint="@string/gender"
            android:paddingTop="10dp"
            android:drawablePadding="5.6dp"
            android:paddingBottom="10dp"
            android:textColorHint="#80083E55"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_birth_day" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="90dp"
            android:background="@drawable/next_btn_bg"
            android:fontFamily="@font/koodak_bold"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="@id/et_phone"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="@id/et_phone"
            app:layout_constraintTop_toBottomOf="@id/et_gender" />

        <TextView
            android:id="@+id/tv_have_account"
            android:layout_marginTop="11dp"
            app:layout_constraintTop_toBottomOf="@id/btn_confirm"
            app:layout_constraintStart_toStartOf="@id/btn_confirm"
            android:layout_width="wrap_content"
            android:textSize="14sp"
            android:fontFamily="@font/koodak_bold"
            android:textColor="#E60E6B94"
            android:text="@string/have_account"
            app:layout_constraintEnd_toEndOf="@id/btn_confirm"
            android:layout_height="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>