<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cl_no_internet"
            android:background="@drawable/dialog_bg"
            android:layout_gravity="center"
            android:paddingBottom="16dp"
            tools:context=".dialog.NoInternetFragment">

            <ImageView
                android:id="@+id/iv_no_internet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:src="@drawable/no_entry"
                app:layout_constraintBottom_toBottomOf="@+id/tv_title_no_internet"
                app:layout_constraintHorizontal_bias="0.798"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_title_no_internet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/no_find_account"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.395"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_if_register_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/if_register_now"
                android:textColor="@color/white"
                android:fontFamily="@font/koodak_bold"
                android:textSize="15sp"
                android:layout_marginTop="17dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@id/tv_title_no_internet"
                app:layout_constraintRight_toRightOf="@id/tv_title_no_internet"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_no_internet" />

            <TextView
                android:id="@+id/tv_first_create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/first_create_account"
                android:textColor="@color/white"
                android:fontFamily="@font/koodak_bold"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@id/tv_if_register_now"
                app:layout_constraintRight_toRightOf="@id/tv_if_register_now"
                app:layout_constraintTop_toBottomOf="@+id/tv_if_register_now" />

            <TextView
                android:id="@+id/btn_create_account"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginRight="62dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/btn_create_account_dialog_bg"
                android:fontFamily="@font/koodak_bold"
                android:paddingStart="6dp"
                android:paddingTop="5dp"
                android:paddingEnd="6dp"
                android:paddingBottom="5dp"
                android:text="@string/btn_create_account_dialog"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_first_create_account" />

            <TextView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginRight="62dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/btn_back_dialog_bg"
                android:fontFamily="@font/koodak_bold"
                android:paddingStart="18dp"
                android:paddingTop="5dp"
                android:paddingEnd="18dp"
                android:paddingBottom="5dp"
                android:text="@string/back"
                android:textColor="@color/white"
                android:layout_marginStart="62dp"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_first_create_account" />

        </androidx.constraintlayout.widget.ConstraintLayout>



</layout>