<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.PageOneFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/cl_input_and_arrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/arrow"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:src="@drawable/arrow"
                    android:paddingTop="6.62dp"
                    android:paddingEnd="11.14dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_dr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/undraw_sharing_articles_re_jnkp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_input_and_arrow"
                app:layout_constraintVertical_bias="0.259" />

            <TextView
                android:id="@+id/tv_in_soft_nbp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/koodak_bold"
                android:text="@string/in_soft_nbp"
                android:textColor="#272727"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_dr"
                app:layout_constraintVertical_bias="0.146" />

            <TextView
                android:id="@+id/tv_status_the_health"
                android:textSize="20sp"
                android:textColor="#272727"
                android:fontFamily="@font/koodak_bold"
                app:layout_constraintStart_toStartOf="@id/tv_in_soft_nbp"
                app:layout_constraintEnd_toEndOf="@id/tv_in_soft_nbp"
                app:layout_constraintTop_toBottomOf="@id/tv_in_soft_nbp"
                android:text="@string/status_the_health"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/iv_share_with_another"
                android:textSize="20sp"
                android:textColor="#272727"
                android:textStyle="bold"
                android:fontFamily="@font/koodak_bold"
                app:layout_constraintStart_toStartOf="@id/tv_in_soft_nbp"
                app:layout_constraintEnd_toEndOf="@id/tv_in_soft_nbp"
                app:layout_constraintTop_toBottomOf="@id/tv_status_the_health"
                android:text="@string/share_with_another"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="92dp"
                android:background="@drawable/next_btn_bg"
                android:fontFamily="@font/koodak_bold"
                android:layout_marginStart="90dp"
                android:layout_marginEnd="90dp"
                android:text="@string/input"
                android:textColor="@color/white"
                android:textSize="17dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_in_soft_nbp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>